# validatron

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
validatron/: Cargo.toml
validatron/examples/: basic.rs  big_example.rs  enum.rs  newtype_variants.rs  struct.rs
validatron/src/: error.rs  lib.rs  validators.rs
validatron/tests/: comp_validators.rs  custom_func_validator.rs  enum.rs  newtype.rs  required_field_validator.rs  seq_len_validators.rs  smoke.rs  trait.rs  trait_impls.rs
validatron_derive/: Cargo.toml
validatron_derive/src/: lib.rs
