[package]
name = "validatron"
version = "0.2.1"
authors = ["Frankie Foston <frankie.foston@spire.com>"]
edition = "2018"
license = "MIT"

description = "A data structure validation library designed for user input"
repository = "https://github.com/nsat/validatron"
readme = "../README.md"

keywords = ["validation", "user-input"]
categories = ["encoding", "parsing"]

[dependencies]
thiserror = "1.0"
validatron_derive = { path = "../validatron_derive", version = "0.2.0" }
serde = {version="1.0", optional=true, features=["derive"]}

[features]
default = ["use-serde"]

use-serde = ["serde"]

[dev-dependencies]
serde_yaml = "0.8"

[[example]]
name = "enum"
path = "examples/enum.rs"
required-features = ["use-serde"]

[[example]]
name = "struct"
path = "examples/struct.rs"
required-features = ["use-serde"]

[[example]]
name = "big_example"
path = "examples/big_example.rs"
required-features = ["use-serde"]
