[package]
name = "validatron_derive"
version = "0.3.0"
authors = ["Frankie Foston <frankie.foston@spire.com>"]
edition = "2021"
license = "MIT"

description = "A data structure validation library designed for user input"
repository = "https://github.com/nsat/validatron"
readme = "../README.md"

keywords = ["validation", "user-input"]
categories = ["encoding", "parsing"]

[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
